elements align fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,6 +95,7 @@ a {
   background-color: #99E2D0;
   color: #008766;
   border-radius: 2px;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
 }
 .restaurant-card_img {
   width: 340px;
@@ -170,7 +171,7 @@ a {
   transition: all 0.5s ease;
 }
 .hero-btn:hover {
-  filter: opacity(0.8);
+  filter: opacity(0.85);
 }
 
 /* Layout */
@@ -275,15 +276,11 @@ header h1 {
 .tutorial {
   padding-top: 50px;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
 }
 .tutorial-title {
   font-size: 24px;
   margin: 0px 0px 35px 24px;
-  width: 100%;
   font-weight: 700;
   text-align: left;
 }
@@ -303,7 +300,6 @@ header h1 {
 .restaurant_title {
   font-size: 24px;
   margin: 0px 0px 35px 24px;
-  width: 100%;
   font-weight: 700;
   text-align: left;
 }
@@ -325,10 +321,10 @@ header h1 {
     font-size: 34px;
   }
   .hero {
-    height: 335px;
+    height: 239px;
   }
   .hero-align {
-    height: 285px;
+    gap: 18px;
     width: 100%;
     background-color: #F6F6F6;
     display: flex;
@@ -338,22 +334,34 @@ header h1 {
   }
   .hero-title {
     font-size: 40px;
+    margin: 0;
     width: auto;
+    font-weight: bold;
   }
   .hero-subtitle {
+    margin: 0;
     width: auto;
   }
   .tutorial {
     flex-direction: column;
+    padding: 50px 180px 50px 180px;
+    width: auto;
+  }
+  .tutorial-title {
+    margin: 0px 0px 25px 0px;
+    width: 100%;
+    font-weight: 700;
+    text-align: left;
   }
   .tutorial-align {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
+    width: 100%;
     height: auto;
-    width: 80%;
     flex-wrap: wrap;
+    padding-bottom: 0px;
   }
   .restaurant {
     display: flex;
@@ -361,6 +369,10 @@ header h1 {
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
+    padding: 50px 180px 50px 180px;
+  }
+  .restaurant_title {
+    width: 100%;
   }
   .restaurant-align {
     display: flex;
@@ -369,10 +381,11 @@ header h1 {
     flex-direction: row;
     flex-wrap: wrap;
     width: 1400px;
+    padding-bottom: 0px;
   }
   .restaurant-card {
     width: 490px;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
   }
   .restaurant-card_new {
     margin-top: 16px;
@@ -383,6 +396,26 @@ header h1 {
   }
   .restaurant-card_desc_heart {
     margin-left: 440px;
+  }
+  footer {
+    height: 114px;
+    align-items: flex-end;
+    justify-content: flex-start;
+    flex-direction: row-reverse;
+  }
+  footer div {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: row;
+    gap: 7px;
+  }
+  footer h1 {
+    margin: 0;
+    margin: 15px 25px 15px 25px;
+  }
+  footer h2 {
+    margin-bottom: 20px;
   }
 }
 
