--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -10,6 +10,6 @@
     box-shadow: 0px 4px 10px 0px #00000040;
     transition: all 0.5s ease;
     &:hover{
-        filter: opacity(0.8);
+        filter: opacity(0.85);
     }
 }
