--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -43,6 +43,7 @@
         background-color: $color-tertiary-bg;
         color: $color-tertiary;
         border-radius: 2px;
+        box-shadow: 0px 2px 4px 0px #00000026;
     }
     &_img{
         width: 340px;
