--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -7,9 +7,9 @@
     }
 
     .hero{
-        height: 335px;
+        height: 239px;
         &-align{
-            height: 285px;
+            gap: 18px;
             width: 100%;
             background-color: #F6F6F6;
             @include flex-center;
@@ -17,21 +17,33 @@
         }
         &-title{
             font-size: 40px;
+            margin: 0;
             width: auto;
+            font-weight: bold;
         }
         &-subtitle{
+            margin: 0;
             width: auto;
         }
     }
     
     .tutorial{
         flex-direction: column;
+        padding: 50px 180px 50px 180px;
+        width: auto;
+        &-title{
+            margin: 0px 0px 25px 0px;
+            width: 100%;
+            font-weight: 700;
+            text-align: left;
+        }
         &-align{
             @include flex-between;
             flex-direction: row;
+            width: 100%;
             height: auto;
-            width: 80%;
             flex-wrap: wrap;
+            padding-bottom: 0px;
         }
     }
     
@@ -39,15 +51,20 @@
         @include flex-center;
         flex-direction: row;
         flex-wrap: wrap;
+        padding: 50px 180px 50px 180px;
+        &_title{
+            width: 100%;
+        }
         &-align{
             @include flex-around;
             flex-direction: row;
             flex-wrap: wrap;
             width: 1400px;
+            padding-bottom: 0px;
         }
         &-card{
             width: 490px;
-            margin-bottom: 30px;
+            margin-bottom: 0px;
             &_new{
                 margin-top: 16px;
                 margin-left: 394px;
@@ -60,6 +77,27 @@
                     margin-left: 440px;
                 }
             }
+        }
+    }
+    
+    footer{
+        height: 114px;
+        align-items: flex-end;
+        justify-content: flex-start;
+        flex-direction: row-reverse;
+        div{
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            flex-direction: row;
+            gap: 7px;
+        }
+        h1{
+            margin: 0;
+            margin: 15px 25px 15px 25px;
+        }
+        h2{
+            margin-bottom: 20px;
         }
     }
 }
